miniextendr-macros/tests/ui/trait_receiver_typed.stderr
error: #[miniextendr] trait method `BadTypedSelf::foo` receiver must be `&self` or `&mut self`, not `self` by value
 --> tests/ui/trait_receiver_typed.rs:7:5
  |
7 |     fn foo(self: &Self);
  |     ^^^^^^^^^^^^^^^^^^^
